--- a/css/styles.css
+++ b/css/styles.css
@@ -702,6 +702,7 @@ h3 {
     background-color: var(--change-color-button);
  }
 
+ /* Форма */
  .name-form {
     display: flex;
     justify-content: center;
@@ -824,11 +825,6 @@ h3 {
     border-radius: 2px;
     opacity: 1;
 }
-
-/* .user-policy:focus+.accept>.fake-chekbox {
-    border: none;
-    outline: 2px solid var(--change-color-button);
-} */
 
 .fake-chekbox {
     display: inline-flex;
