--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -30,6 +30,7 @@ p {
 }
 
 .container {
+    min-width: 320px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
@@ -54,6 +55,54 @@ p {
 
 .logo-studio-footer {
     color: var(--secondary-background-color);
+}
+
+/* Меню-навигация */
+
+.mobile-menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.mobile-menu-btn .mobile-close {
+    display: none;
+}
+
+.mobile-menu-btn .is-open .mobile-close {
+    display: block;
+}
+
+.mobile-menu-btn .is-open .mobile-open {
+    display: none;
+}
+
+.mobile-header {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+.mobile-menu {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 600px;
+    left: 0;
+    top: 100%;
+    background-color: #31D0AA;
+}
+
+.mobile-menu .is-open {
+    display: block;
 }
 
 /* Секция Hero */
@@ -108,11 +157,9 @@ p {
     background-color: var(--secondary-text-color);
     padding-top: 188px;
     padding-bottom: 188px;
-    background-size: 856px 864px;
+    max-width: 1440;
+    height: 432px;
     background-repeat: no-repeat;
-    background-position: center top;
-    margin-left: auto;
-    margin-right: auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
         url("../images/mobile-bg-hero.jpg")
@@ -221,8 +268,7 @@ p {
     margin-top: 72px;
 }
 
-
-.team-list>.item>img {
+.team-foto {
     display: block;
     max-width: 100%;
     height: auto;
@@ -282,9 +328,9 @@ p {
 
 
 .about-text {
+    text-align: left;
     color: var(--third-text-color);
     margin-top: 16px;
-    font-size: 16px;
     line-height: 1.5;
     margin-right: auto;
     margin-left: auto;
@@ -424,7 +470,7 @@ p {
     cursor: pointer;
     justify-content: center;
     align-items: center;
-    transition-property: trabackground-color;
+    transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -579,6 +625,85 @@ p {
 }
 
 
+/* Мобильное меню */
+
+.menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+}
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: var(--background-color);
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    color: #000000;
+    background-color: var(--third-text-color);
+
+        transition-property: background-color, color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+    
+        .menu-toggle:hover,
+        .menu-toggle:focus {
+            background-color: var(--change-color-button);
+            color: var(--background-color);
+        }
+
+.mobile-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu .link {
+    display: block;
+    padding: 10px;
+    color: red;
+    text-decoration: none;
+}
+
+
 @media screen and (max-width: 1199px) {
     .icon-decoration {
         display: none;
@@ -591,7 +716,7 @@ p {
 
 @media screen and (max-width: 767px) {
     .container {
-        width: 426px;
+        width: 428px;
     }
 
     .navigation-list {
@@ -606,12 +731,19 @@ p {
 
 @media screen and (min-width: 768px) {
     .container {
-        width: 766px;
+        width: 768px;
+    }
+
+    .mobile-menu-btn {
+        display: none;
+    }
+
+    .test {
+        margin: 0;
     }
 
         @media screen and (min-width: 768px) {
             .overlya {
-                background-size: 1536px 872px;
                 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                             rgba(46, 47, 66, 0.7)),
                              url('../images/tablet-bg-hero.jpg');
@@ -633,7 +765,7 @@ p {
             display: flex;
             align-items: center;
             padding-top: 24px;
-            padding-bottom: 24px;
+            padding-bottom: 12px;
         }
     
         .page-header {
@@ -643,6 +775,11 @@ p {
         /* Навигация */
         .navigation {
             display: flex;
+            align-items: center
+        }
+
+        .menu-nav {
+            padding:  0px 16px;
         }
     
         .navigation-link {
@@ -811,7 +948,6 @@ p {
 
            @media screen and (min-width: 1200px) {
             .overlya {
-                background-size: 1440px 600px;
                 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
                 url('../images/desktop-bg-hero.jpg');
@@ -849,6 +985,14 @@ p {
 
     .contacts-list .item:not(:first-child) {
     margin-left: 40px;
+    }
+
+    /* Хедер */
+
+    .menu-nav {
+        padding: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     /* Секция герой */
