--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -30,17 +30,16 @@ img {
     margin: 0;
 }
 
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .section {
     padding-top: 96px;
     padding-bottom: 96px;
-}
-
-.container {
-    min-width: 100%;
-    /* margin-left: auto;
-    margin-right: auto; */
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 /* Логотип */
@@ -84,6 +83,8 @@ img {
     align-items: center;
     margin-top: 24px;
     margin-bottom: 24px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Секция Hero */
